--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^11.0.0",
     "erela.js": "^2.3.3",
     "erela.js-apple": "^1.2.6",
+    "erela.js-deezer": "^1.0.7",
     "eris": "^0.16.1"
   },
   "devDependencies": {
