--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "erela.js": "^2.3.3",
     "erela.js-apple": "^1.2.6",
     "erela.js-deezer": "^1.0.7",
-    "eris": "^0.16.1"
+    "eris": "^0.16.1",
+    "glob": "^7.2.0"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
