--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "erela.js-apple": "^1.2.6",
     "erela.js-deezer": "^1.0.7",
     "eris": "^0.16.1",
-    "glob": "^7.2.0"
+    "glob": "^7.2.0",
+    "mongoose": "^6.1.6"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
