--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "erela.js-deezer": "^1.0.7",
     "eris": "^0.16.1",
     "glob": "^7.2.0",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "ms": "^2.1.3"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
